write simple style for main, add text content to eval

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,25 @@
   </header>
 
   <!-- Page-specific (main) content here -->
-  <main class="container"></main>
+  <main class="container">
+    <h2>Lorem ipsum dolor sit</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor autem consequatur! Ipsum similique
+      sed, expedita deserunt quas dolorem nihil consectetur repellendus vero placeat itaque, sit, nisi cum ullam
+      aliquid.</p>
+    <h2>Lorem ipsum dolor sit</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor autem consequatur! Ipsum similique
+      sed, expedita deserunt quas dolorem nihil consectetur repellendus vero placeat itaque, sit, nisi cum ullam
+      aliquid.</p>
+    <h2>Lorem ipsum dolor sit</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor autem consequatur! Ipsum similique
+      sed, expedita deserunt quas dolorem nihil consectetur repellendus vero placeat itaque, sit, nisi cum ullam
+      aliquid.</p>
+    <h2>Lorem ipsum dolor sit</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor autem consequatur! Ipsum similique
+      sed, expedita deserunt quas dolorem nihil consectetur repellendus vero placeat itaque, sit, nisi cum ullam
+      aliquid.</p>
+
+  </main>
 </body>
 
 </html>
