fetch tweets and render using previously created createTweetElement

--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
   <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
   <!-- External JS -->
-  <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
-    integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
   <!-- JQuery Plugins -->
   <script src="https://cdn.jsdelivr.net/npm/timeago@1.6.7/jquery.timeago.min.js"></script>
@@ -71,7 +71,7 @@
       </form>
     </section>
     <section class="tweet-container">
-      <article class="tweet">
+      <!-- <article class="tweet">
         <header>
           <div class="tweet__profile">
             <img src="images/profile_icons/female_1.png" alt="author avatar" />
@@ -93,7 +93,7 @@
             </i>
           </div>
         </footer>
-        </div>
+        </div> -->
       </article>
     </section>
   </main>
