add error message chrome

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/error.css" type="text/css" />
   <script>let timeagoFail = true</script>
   <!-- External JS -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
@@ -58,6 +59,8 @@
       <h2 class="header__name"><strong>Luke</strong> Stephenson</h2>
     </div>
   </header>
+
+  <div class="error"></div>
 
   <!-- Page-specific (main) content here -->
   <main class="container">
