add toggle new tweet chrome

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <span class="header-nav__brand">tweeter</span>
     <div class="header-nav__sub">
       <span><strong>Write</strong> a new tweet</span>
-      <i class="fa-solid fa-angles-down icon"></i>
+      <i class="fa-solid fa-angles-down icon header-nav__down"></i>
     </div>
   </nav>
 
