--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,10 @@
         </div> -->
       </article>
     </section>
+
+    <div class="scroll-top">
+      <i class="fa-solid fa-angles-up"></i>
+    </div>
   </main>
 </body>
 
